force-app/main/default/objects/PartnerCompany__c/PartnerCompany__c.object-meta.xml
<CustomObject>
    <label>協力会社</label>
    <nameField>
        <label>協力会社名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>