force-app/main/default/objects/PartnerCompany__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>協力会社</relationshipLabel>
    <relationshipName>AccountPartnerCompany</relationshipName>
    <type>Lookup</type>
</CustomField>