force-app/main/default/objects/PartnerCompany__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>競合会社</label>
    <type>Checkbox</type>
</CustomField>