force-app/main/default/objects/PartnerCompany__c/fields/CW_PartnerKey__c.field-meta.xml
<CustomField>
    <fullName>CW_PartnerKey__c</fullName>
    <description>取り込み用外部キー</description>
    <externalId>true</externalId>
    <label>CSWEB取り込み用（外部キー）</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>