force-app/main/default/objects/PartnerCompany__c/fields/HearingSource__c.field-meta.xml
<CustomField>
    <fullName>HearingSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>得意先担当者（ヒアリング元）</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>協力会社</relationshipLabel>
    <relationshipName>ContactHearingSource</relationshipName>
    <type>Lookup</type>
</CustomField>