force-app/main/default/objects/PartnerCompany__c/fields/InCharge__c.field-meta.xml
<CustomField>
    <fullName>InCharge__c</fullName>
    <label>担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>