force-app/main/default/objects/PartnerCompany__c/fields/Material10__c.field-meta.xml
<CustomField>
    <fullName>Material10__c</fullName>
    <label>資材名10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>