force-app/main/default/objects/PartnerCompany__c/fields/Material11__c.field-meta.xml
<CustomField>
    <fullName>Material11__c</fullName>
    <label>資材名11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>