force-app/main/default/objects/PartnerCompany__c/fields/Material12__c.field-meta.xml
<CustomField>
    <fullName>Material12__c</fullName>
    <label>資材名12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>