force-app/main/default/objects/PartnerCompany__c/fields/Price10__c.field-meta.xml
<CustomField>
    <fullName>Price10__c</fullName>
    <label>価格10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>