force-app/main/default/objects/PartnerCompany__c/fields/Price11__c.field-meta.xml
<CustomField>
    <fullName>Price11__c</fullName>
    <label>価格11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>