force-app/main/default/objects/PartnerCompany__c/fields/Price12__c.field-meta.xml
<CustomField>
    <fullName>Price12__c</fullName>
    <label>価格12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>