force-app/main/default/objects/PartnerCompany__c/fields/ServiceOverview__c.field-meta.xml
<CustomField>
    <fullName>ServiceOverview__c</fullName>
    <label>サービス概要</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>