force-app/main/default/objects/PartnerCompany__c/fields/WorkType__c.field-meta.xml
<CustomField>
    <fullName>WorkType__c</fullName>
    <label>工種</label>
    <length>255</length>
    <type>Text</type>
</CustomField>